# condensed_phase_properties

./: .flake8  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  compute_properties.py  get_available_properties.py  main.py  mkdocs.yml  mypy.ini  package_testing.py  pyproject.toml
.github/workflows/: code_quality_checks.yml  deploy_docs.yml  docs_publish.yml
condensed_phase_properties/: __init__.py
condensed_phase_properties/analysis/: __init__.py  analysis_script.py  cp_props.py
condensed_phase_properties/data/all_property_data/acetone/thermodynamic_properties/initial_npt_run/: cp_props_acetone.csv  cp_props_time_series_acetone.csv
condensed_phase_properties/data/all_property_data/hexane/thermodynamic_properties/initial_npt_run/: cp_props_hexane.csv  cp_props_time_series_hexane.csv
condensed_phase_properties/data/all_property_data/water/thermodynamic_properties/initial_npt_run/: cp_props_time_series_water.csv  cp_props_water.csv
condensed_phase_properties/plotting/: plotting_script.py
condensed_phase_properties/simulation/: equi.py  methanol_equi_mm.sh  methanol_production_mm.sh  production.py  simulation_script.py
condensed_phase_properties/simulation/input_data/methanol/: moh323.crd  moh323.psf
docs/: index.md
tests/: test_condensed_phase_properties.py
