[tool.poetry]
name = "condensed_phase_properties"
version = "0.1.0"
homepage = "https://github.com/apicha/condensed-phase-properties"
description = "condensed_phase_properties contains tha scripts and exemplary input data that were used to simulate and analyse presented data"
authors = ["Anna Picha <anna.picha@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]

packages = [
    { include = "condensed_phase_properties" },
]

include = [
    "LICENSE",
    "condensed_phase_properties/py.typed",
    "condensed_phase_properties/data/**"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
importlib_metadata = ">=4.11.4,<5.0.0"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^6.1.5"
flake8 = "^6.1.0" 
flake8-docstrings = "1.6.0"
flake8-colors = "0.1.8"
pylint = "^2.6.0"
black = "22.3.0"
mypy = "^1.15.0"

[flake8]
max-line-length = 100

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
